<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUser">

    <EditText
        android:id="@+id/addUser_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/addUser_Name"
        app:layout_constraintStart_toStartOf="@+id/addUser_Name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addUser_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/addUser_Email"
        app:layout_constraintStart_toStartOf="@+id/addUser_Email"
        tools:layout_editor_absoluteY="115dp" />

    <EditText
        android:id="@+id/addUser_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/addUser_Password"
        app:layout_constraintStart_toStartOf="@+id/addUser_Password"
        tools:layout_editor_absoluteY="187dp" />

    <EditText
        android:id="@+id/addUser_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="261dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="84dp" />

</android.support.constraint.ConstraintLayout>