<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/main_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:layout_marginTop="98dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/main_Password"
        app:layout_constraintEnd_toEndOf="@+id/main_Password"
        app:layout_constraintStart_toStartOf="@+id/main_Password"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/main_Login"
        app:layout_constraintEnd_toEndOf="@+id/main_Login"
        app:layout_constraintStart_toStartOf="@+id/main_Login" />

    <Button
        android:id="@+id/main_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:text="@string/login_text"
        app:layout_constraintBottom_toTopOf="@+id/main_Register"
        app:layout_constraintEnd_toEndOf="@+id/main_Register"
        app:layout_constraintStart_toStartOf="@+id/main_Register" />

    <Button
        android:id="@+id/main_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:text="@string/register_text"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="148dp" />

</android.support.constraint.ConstraintLayout>